--- a/docs/content/hdfs_parquet.html.md.erb
+++ b/docs/content/hdfs_parquet.html.md.erb
@@ -23,6 +23,8 @@ under the License.
 
 Use the PXF HDFS connector to read and write Parquet-format data. This section describes how to read and write HDFS files that are stored in Parquet format, including how to create, query, and insert into external tables that reference files in the HDFS data store.
 
+PXF supports reading or writing Parquet files compressed with these codecs: `snappy`, `gzip`, and `lzo`.
+
 PXF currently supports reading and writing primitive Parquet data types only.
 
 
