--- a/docs/content/access_objstore.html.md.erb
+++ b/docs/content/access_objstore.html.md.erb
@@ -37,6 +37,7 @@ Before working with object store data using PXF, ensure that:
 The PXF object store connectors provide built-in profiles to support the following data formats:
 
 - Text
+- CSV
 - Avro
 - JSON
 - ORC
@@ -49,6 +50,7 @@ The PXF connectors to Azure expose the following profiles to read, and in many c
 | Data Format | Azure Blob Storage | Azure Data Lake | Supported Operations |
 |-----|------|---------| ---------|
 | delimited single line [plain text](objstore_text.html) | wasbs:text | adl:text | Read, Write |
+| delimited single line comma-separated values of [plain text](objstore_text.html) | wasbs:csv | adl:csv | Read, Write |
 | delimited [text with quoted linefeeds](objstore_text.html) | wasbs:text:multi | adl:text:multi | Read |
 | [Avro](objstore_avro.html) | wasbs:avro | adl:avro | Read, Write |
 | [JSON](objstore_json.html) | wasbs:json | adl:json | Read |
@@ -62,6 +64,7 @@ Similarly, the PXF connectors to Google Cloud Storage, Minio, and S3 expose thes
 | Data Format | Google Cloud Storage | S3 or Minio | Supported Operations |
 |-----|------|---------| ---------|
 | delimited single line [plain text](objstore_text.html) | gs:text | s3:text | Read, Write |
+| delimited single line comma-separated values of [plain text](objstore_text.html) | gs:csv | s3:csv | Read, Write |
 | delimited [text with quoted linefeeds](objstore_text.html) | gs:text:multi | s3:text:multi | Read |
 | [Avro](objstore_avro.html) | gs:avro | s3:avro | Read, Write |
 | [JSON](objstore_json.html) | gs:json | s3:json | Read|
