Docs: misc updates (#603)
* Docs: misc updates

--- a/docs/content/config_files.html.md.erb
+++ b/docs/content/config_files.html.md.erb
@@ -21,6 +21,7 @@ The `pxf-application.properties` file exposes these PXF Service application conf
 | pxf.task.pool.core-size | The number of core streaming threads. | 8 |
 | pxf.task.pool.queue-capacity | The capacity of the core streaming thread pool queue. | 0 |
 | pxf.task.pool.max-size | The maximum allowed number of core streaming threads. | pxf.max.threads if set, or 200 |
+| pxf.log.level | The log level for the PXF Service. | info  |
 
 To set a new value for a PXF Service application property, you may first need to uncomment the property in the `pxf-application.properties` file before you set the new value.
 
