--- a/docs/content/nfs_pxf.html.md.erb
+++ b/docs/content/nfs_pxf.html.md.erb
@@ -7,6 +7,7 @@ You can use PXF to read data that resides on a network file system mounted on yo
 | File Type | Profile Name | Operations Supported |
 |-------------|--------------|------------|
 | delimited single line text | file:text | read, write |
+| delimited single line comma-separated values of text | file:csv | read, write |
 | delimited text with quoted linefeeds | file:text:multi | read |
 | Avro | file:avro | read, write |
 | JSON | file:json | read |
