--- a/docs/content/upgrade_5_to_6.html.md.erb
+++ b/docs/content/upgrade_5_to_6.html.md.erb
@@ -29,7 +29,7 @@ Perform this procedure before you upgrade to a new version of PXF:
     gpadmin@gpmaster$ pxf version
     ```
 
-1. Identify the file system location of the `$PXF_CONF` setting in your PXF 5.x PXF installation; you will need this later.
+1. Identify the file system location of the `$PXF_CONF` setting in your PXF 5.x installation; you will need this later.
 
 1. Stop PXF on each Greenplum host as described in [Stopping PXF](cfginitstart_pxf.html#stop_pxf).
 
