--- a/docs/content/config_files.html.md.erb
+++ b/docs/content/config_files.html.md.erb
@@ -21,7 +21,7 @@ The `pxf-application.properties` file exposes these PXF Service application conf
 | pxf.task.pool.core-size | The number of core streaming threads. | 8 |
 | pxf.task.pool.queue-capacity | The capacity of the core streaming thread pool queue. | 0 |
 | pxf.task.pool.max-size | The maximum allowed number of core streaming threads. | pxf.max.threads if set, or 200 |
-| pxf.log.level | The log level for the PXF Service. | info  |
+| [pxf.log.level](cfg_logging.html) | The log level for the PXF Service. | info  |
 
 To set a new value for a PXF Service application property, you may first need to uncomment the property in the `pxf-application.properties` file before you set the new value.
 
@@ -32,7 +32,7 @@ The `pxf-env.sh` file exposes these PXF JVM configuration properties:
 
 | Parameter  | Description | Default Value |
 |-----------|---------------| ------------|
-| JAVA_HOME    | The path to the Java JRE home directory. | /usr/java/default |
+| [JAVA_HOME](instcfg_pxf.html)    | The path to the Java JRE home directory. | /usr/java/default |
 | [PXF_LOGDIR](cfg_logging.html#cfglogdir)   | The PXF log directory. | $PXF_BASE/logs |
 | PXF_RUNDIR   | The PXF run directory. | $PXF_BASE/run |
 | [PXF_JVM_OPTS](cfg_mem.html#pxf-heapcfg)  | The default options for the PXF Java virtual machine. | -Xmx2g -Xms1g |
